# local-agent-loop

./: .gitignore  CLAUDE.md  Cargo.toml  durable-workflow-engine-design.md  package-lock.json  package.json  vite.config.js
crates/activity/: Cargo.toml
crates/activity/src/: context.rs  def.rs  error.rs  execution.rs  info.rs  lib.rs
crates/chat/: Cargo.toml
crates/chat-service/: Cargo.toml
crates/chat-service/src/: lib.rs
crates/chat/src/: activities.rs  lib.rs  session.rs  types.rs
crates/chat/tests/: flow.rs
crates/demo/: Cargo.toml
crates/demo/src/: activities.rs  lib.rs  types.rs  workflows.rs
crates/demo/tests/: flow.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  lib.rs  traits.rs  types.rs
crates/engine/tests/: activity_di.rs  activity_double_register.rs  children.rs  concurrency.rs  end_to_end.rs  equivalence.rs  hardening.rs  migration_seam.rs  patched.rs  signals.rs  timers.rs
crates/persist/: Cargo.toml
crates/persist/src/: history_impl.rs  lib.rs  schema.rs  sqlite.rs  taskqueue_impl.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: command.rs  context.rs  def.rs  error.rs  event.rs  future.rs  info.rs  lib.rs  replay.rs  result.rs  retry.rs  signal.rs  spawn.rs  state.rs
docs/superpowers/plans/: 2026-06-13-durable-workflow-engine-ROADMAP.md  2026-06-14-pass-2b-combinators-and-spawn.md  2026-06-14-pass-2c-hardening.md  2026-06-15-pass-5a-determinism-guard-and-divergence-hardening.md  2026-06-15-pass-5b-patched-and-trait-boundary.md  2026-06-17-activity-dependency-injection.md  2026-06-17-llm-chat.md
docs/superpowers/plans/archive/: 2026-06-13-durable-workflow-engine-ROADMAP.md  2026-06-13-pass-1a-workspace-and-protocol-types.md  2026-06-13-pass-1b-replay-core.md  2026-06-13-pass-1c-persist-and-traits.md  2026-06-13-pass-1d-driver-and-workers.md  2026-06-14-pass-2a-timers.md  2026-06-14-pass-3a-inbound-events-and-signal-channel.md  2026-06-14-pass-3b-signal-workflow-and-e2e.md  2026-06-14-pass-4a-child-workflows.md  2026-06-15-child-dead-letter-parent-notify.md  2026-06-15-pass-5b-patched-and-trait-boundary.md  2026-06-15-tauri-chat-app.md  2026-06-15-workflow-history-viewer.md
docs/superpowers/specs/: 2026-06-13-durable-workflow-engine-design.md  2026-06-15-tauri-chat-app-design.md  2026-06-15-workflow-history-viewer-design.md  2026-06-17-activity-dependency-injection-design.md  2026-06-17-llm-chat-design.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: applyCompletion.js  applyCompletion.test.js  chat.js  chat.test.js  historyView.js  historyView.test.js
src/routes/: +page.svelte
src/routes/history/: +page.svelte
