[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
async-trait = "0.1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
uuid        = { version = "1", features = ["v4"] }
futures     = "0.3"
tempfile    = "3"
