[package]
name = "app"
version = "0.0.0"
description = "Workflow Chat — Tauri host"
edition = "2021"
publish = false

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (Windows cargo issue,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = "1"
tokio      = { workspace = true }
engine       = { path = "../crates/engine" }
persist      = { path = "../crates/persist" }
chat         = { path = "../crates/chat" }
chat-service = { path = "../crates/chat-service" }
reqwest      = { version = "0.13", default-features = false, features = ["json", "rustls"] }
workflow     = { path = "../crates/workflow" }

[dev-dependencies]
activity = { path = "../crates/activity" }
