[package]
name = "chat"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
activity     = { path = "../activity" }
workflow     = { path = "../workflow" }
chat-service = { path = "../chat-service" }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
reqwest      = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
engine  = { path = "../engine" }
persist = { path = "../persist" }
tokio   = { workspace = true }
