[package]
name = "demo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
activity    = { path = "../activity" }
workflow    = { path = "../workflow" }
serde       = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
engine     = { path = "../engine" }
persist    = { path = "../persist" }
tokio      = { workspace = true }
serde_json = { workspace = true }
