[package]
name = "engine"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
workflow    = { path = "../workflow" }
activity    = { path = "../activity" }
async-trait = { workspace = true }
anyhow      = "1"
tokio       = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
persist = { path = "../persist" }
futures = { workspace = true }
