[package]
name = "persist"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
engine      = { path = "../engine" }
workflow    = { path = "../workflow" }
activity    = { path = "../activity" }
rusqlite    = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
anyhow      = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
