[package]
name = "workflow"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
activity    = { path = "../activity" }
serde       = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true }
