[package]
name = "workflow"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
activity    = { path = "../activity" }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
